# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributedhardware/devicemanager/devicemanager.gni")
module_out_path = "deviceManager_stander/inner_kits"

group("unittest") {
  testonly = true

  deps = [ ":device_manager_impl_test" ]
}

## UnitTest device_manager_impl_test {{{
ohos_unittest("device_manager_impl_test") {
  module_out_path = module_out_path

  sources = [ "device_manager_impl_test.cpp" ]

  deps = [ ":device_manager_test_common" ]
}

## UnitTest device_manager_impl_test }}}

## Build device_manager_test_common.a {{{
config("device_manager_test_common_public_config") {
  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include/ipc/standard",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include/ipc",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include/notify",
    "${utils_path}/include/log",
    "${common_path}/include/ipc",
    "${common_path}/include/ipc/model",
    "${utils_path}/include/ipc/standard",
    "${common_path}/include",
    "//third_party/json/include",
  ]

  cflags = [
    "-Wall",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_static_library("device_manager_test_common") {
  testonly = true

  visibility = [ ":*" ]

  public_configs = [ ":device_manager_test_common_public_config" ]

  public_deps = [
    "${utils_path}:devicemanagerutils",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp:devicemanagersdk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//third_party/googletest:gmock",
    "//utils/native/base:utils",
    "//utils/native/base:utils",
  ]
}
## Build device_manager_test_common.a }}}
