# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("dfx_signal_handler_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "include",
    "//base/hiviewdfx/faultloggerd/common",
    "//base/hiviewdfx/faultloggerd/tools/process_dump",
    "//utils/native/base/include",
  ]

  if (use_musl) {
    cflags = [ "-DDFX_LOCAL_UNWIND" ]
  }
}

ohos_shared_library("dfx_signalhandler") {
  public_configs = [ ":dfx_signal_handler_config" ]

  sources = [ "dfx_signal_handler.c" ]

  deps = [ "//utils/native/base:utils" ]
  if (use_musl) {
    deps += [
      "//base/hiviewdfx/faultloggerd/tools/process_dump:process_info_src",
      "//third_party/libunwind:libunwind"
    ]
  }

  external_deps = [ "hilog_native:libhilog" ]
  part_name = "faultloggerd"
  subsystem_name = "hiviewdfx"
}
