# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/ohos.gni")

################################################################
# C++, Main source file here.
################################################################
config("permission_standard_infrastructure_cxx_public_config") {
  visibility = [ ":*" ]

  include_dirs = [ "main/cpp/include" ]

  defines = [
    "APP_LOG_TAG = \"DistributedPermission\"",
    "LOG_DOMAIN = 0xD001024",
  ]
}

ohos_shared_library("permission_standard_infrastructure_record_database") {
  subsystem_name = "security"
  part_name = "permission_standard"

  public_configs = [ ":permission_standard_infrastructure_cxx_public_config" ]

  include_dirs = [
    "${distributed_permission_frameworks_log_path}/main/cpp/include",
    "//third_party/json/single_include",
    "${distributed_permission_services_path}/main/cpp/include/common",
    "${distributed_permission_services_path}/main/cpp/include/record",
  ]

  sources = [
    "${distributed_permission_record_database_path}/main/cpp/src/data_storage.cpp",
    "${distributed_permission_record_database_path}/main/cpp/src/data_translator.cpp",
    "${distributed_permission_record_database_path}/main/cpp/src/generic_values.cpp",
    "${distributed_permission_record_database_path}/main/cpp/src/sqlite_helper.cpp",
    "${distributed_permission_record_database_path}/main/cpp/src/sqlite_storage.cpp",
    "${distributed_permission_record_database_path}/main/cpp/src/statement.cpp",
    "${distributed_permission_record_database_path}/main/cpp/src/variant_value.cpp",
    "${distributed_permission_services_path}/main/cpp/src/common/constant.cpp",
  ]

  deps = [
    "${distributed_permission_frameworks_log_path}:permission_standard_infrastructure_cxx",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//third_party/sqlite:sqlite",
    "//utils/native/base:utils",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
