# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

group("build_module") {
  deps = [ ":distributeddata" ]
}

ohos_copy("distributeddatamgr_declaration") {
  sources = [ "./api" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_shared_library("distributeddata") {
  include_dirs = [
    "//third_party/node/src",
    "//third_party/libuv/include",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/frameworks/jskitsimpl/distributeddata/include",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter/include/log",
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/adapter/include/autils",
  ]

  sources = [
    "../../../frameworks/jskitsimpl/distributeddata/src/async_call.cpp",
    "../../../frameworks/jskitsimpl/distributeddata/src/entry_point.cpp",
    "../../../frameworks/jskitsimpl/distributeddata/src/js_util.cpp",
    "../../../frameworks/jskitsimpl/distributeddata/src/kv_manager.cpp",
    "../../../frameworks/jskitsimpl/distributeddata/src/single_kv_store.cpp",
  ]

  deps = [
    "//foundation/ace/napi:ace_napi",
    "//foundation/distributeddatamgr/distributeddatamgr/interfaces/innerkits/distributeddata:distributeddata_inner",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "distributeddatamgr"
  relative_install_dir = "module/data"
}