# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_shared_library("native_file_manager") {
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"

  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    # "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_rdb/include",
    # "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_appdatafwk/include",
    "//third_party/sqlite/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/jskitsimpl/native_rdb/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/jskitsimpl/common/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/jskitsimpl/native_dataability/include",
  ]

  sources = [
    "src/fd_holder.cpp",
    "src/file_info.cpp",
    "src/fms_utils.cpp",
    "src/root_info.cpp",
  ]

  deps = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:dummy_classes",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_rdb:native_rdb",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//utils/native/base:utilsecurec",
    # "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    # "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager:dataobs_manager",
  ]

  external_deps = [
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]
}

ohos_shared_library("file_share_ability") {
  subsystem_name = "distributeddatamgr"
  part_name = "storage_standard"

  include_dirs = [
    "//foundation/distributeddatamgr/appdatamgr/frameworks/jskitsimpl/native_rdb/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/jskitsimpl/common/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/jskitsimpl/native_dataability/include",
  ]

  sources = [
    "src/file_share_ability.cpp",
    "src/shared_path_strategy.cpp",
  ]

  deps = [
    ":native_file_manager",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    # "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    # "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager:dataobs_manager",
  ]

  external_deps = [
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
  ]
}

# Unittest
group("test") {
  testonly = true
  deps = [ "test:test" ]
}
