# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/time/time.gni")

ohos_shared_library("systemtime") {
  include_dirs = [
    "//base/miscservices/time/interfaces/innerkits/include",
    "include",
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
  ]

  configs = [
    "${time_utils_path}:utils_config",
  ]

  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [ "src/js_systemtime.cpp" ]

  deps = [
    "//base/miscservices/time/services:time_service",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/ace/napi/:ace_napi",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "miscservices"
  part_name = "time_native"
}
