# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/ces_standard/event.gni")
import("//build/ohos.gni")

cflags = []

config("native_module_config") {
  visibility = [ ":*" ]

  include_dirs = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "EVENT_LOG_TAG = \"SYSTEMTIMER_STANDARD\"",
    "LOG_DOMAIN = xxxx",
  ]
}

ohos_shared_library("systemtimer") {
  include_dirs = [
    "//base/miscservices/time/interfaces/innerkits/include",
    "./include",
    "//foundation/ace/napi/interfaces/kits/napi",
    "//third_party/node/src",
    "//third_party/libuv/include",
  ]

  configs = [ ":native_module_config" ]

  sources = [
    "src/system_timer.cpp",
    "src/timer_init.cpp",
    "src/timer_type.cpp",
  ]

  deps = [
    "//base/miscservices/time/services:time_service",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/ace/napi:ace_napi",
    "//third_party/libuv:uv_static",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "miscservices"
  part_name = "time_native"
}
