# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/permission/permission.gni")
import("//build/ohos.gni")

config("permission_test_config") {
  include_dirs = [
    "${distributed_permission_frameworks_log_path}/main/cpp/include",
    "${distributed_permission_innerkits_distributed_path}/main/cpp/include",
    "${distributed_permission_innerkits_distributed_path}/main/cpp/include/permission",
    "${distributed_permission_record_database_path}/main/cpp/include",
    "${distributed_permission_services_path}/main/cpp/include",
    "${distributed_permission_services_path}/main/cpp/include/command",
    "${distributed_permission_services_path}/main/cpp/include/common",
    "${distributed_permission_services_path}/main/cpp/include/device",
    "${distributed_permission_services_path}/main/cpp/include/distributed",
    "${distributed_permission_services_path}/main/cpp/include/protocol",
    "${distributed_permission_services_path}/main/cpp/include/record",
    "${distributed_permission_innerkits_sdk_path}/main/cpp/include/permission_using_remind",
    "${distributed_permission_innerkits_sdk_path}/main/cpp/src/permission_using_remind",
    "${distributed_permission_services_path}/main/cpp/include/remote",
    "${distributed_permission_services_path}/main/cpp/include/service",
    "//base/security/permission/frameworks/permission_standard/permissioninfrastructure",
    "//base/security/permission/interfaces/innerkits/permission_standard/permissionsdk/main/cpp/include",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//third_party/node/src",
    "//third_party/json/include",
    "//third_party/json/single_include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "${distributed_permission_innerkits_sdk_path}//main/cpp/include/permission",
  ]

  defines = [
    "APP_LOG_TAG = \"DistributedPermissionTest\"",
    "LOG_DOMAIN = 0xD001025",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = []
}

group("unittest") {
  testonly = true
  deps = [
    "unittest/app_id_info_helper_test:unittest",
    "unittest/app_id_info_test:unittest",
    "unittest/check_permission_inner_test:unittest",
    "unittest/permission_remind_inner_test:unittest",
  ]
}
